fix horizontal scrolling

--- a/main/static/style.css
+++ b/main/static/style.css
@@ -179,7 +179,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 @media (prefers-color-scheme: dark) {
     body {
